--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
- {
+{
   "functions": {
     "api/server.js": {
       "memory": 1024,
-      "includeFiles": "db.json"
+      "includeFiles": "/tmp/test_db.json"
     }
   },
   "rewrites": [
