--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "json-server",
   "version": "1.0",
   "scripts": {
-    "server": "node server/server.js"
+    "server": "node api/server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
